# better-tables

./: README.md  main.py  pyproject.toml
.github/workflows/: release.yml
src/better-tables/: table.py  table_style.py
src/better-tables/utils/: helpers.py  render_utils.py
src/better_tables/: __init__.py  table.py  table_style.py
src/better_tables/utils/: render_utils.py
