[project]
name = "better-tables"
version = "0.2.1"
description = "Minimal pd.DataFrame wrapper to create better tables for LaTeX and HTML."
readme = "README.md"
authors = [
    { name = "Thibault Charbonnier", email = "thibault.charbonnier@ensae.fr" }
]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0,<3.0.0",
]
